<resources>
    <string name="app_name">Estore</string>

    <string name="title_activity_base">BaseActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="radiobutton1">Home </string>
    <string name="radiobutton2">flashSale </string>
    <string name="radiobutton3">shopCar </string>
    <string name="radiobutton4">Mine </string>
    <string name="to_login"> LogIn</string>
    <string name="xianshiqiang">TimeSale</string>
    <string name="mingpindian">goodShop</string>
    <string name="fenlei">Sort</string>
    <string name="haiwaitao">InternetShop</string>
    <string name="productname">商品名称</string>
</resources>
